<resources>
    <string name="app_name">风声</string>
    <string name="app_title">Title</string>
    <string name="app_message" translatable="false">消息</string>
    <string name="app_addres" translatable="false">通讯录</string>
    <string name="app_found" translatable="false">发现</string>
    <string name="app_min" translatable="false">我的</string>
    <string name="app_btn_now" translatable="false">立即体验</string>
    <string name="app_jump">%d跳过</string>
    <string name="app_send_group">发起群聊</string>
    <string name="app_add_friendy">添加好友</string>
    <string name="app_saoyisao">扫一扫！</string>
    <string name="app_saoyisao1">扫一扫</string>
    <string name="app_account">账号/手机号</string>
    <string name="app_pwd">请输入密码</string>
    <string name="app_phoneNumber">请输入11位有效的电话号码!</string>
    <string name="app_codeNumber">请输入6位有效的验证码!</string>
    <string name="app_pwdNumber">设置的密码不能少于8位!</string>
    <string name="app_isLoginEmpty">请将账号和密码填写完整!</string>
    <string name="app_isRegisterEmpty">请将手机号、验证码和密码填写完整!</string>
    <string name="app_input_phone">请输入手机号</string>
    <string name="app_input_new_pwd">请输入新密码</string>
    <string name="app_input_angle_pwd">请再次输入新密码</string>
    <string name="app_pwd_noway">您两次输入的密码不一致,请重新输入!</string>
    <string name="app_varly">请输入验证码</string>
    <string name="app_getvarly">获取验证码</string>
    <string name="app_next">下一步</string>
    <string name="app_finish">完 成</string>
    <string name="app_great">请同意用户协议!</string>
    <string name="app_title_great">《风声用户协议》</string>
    <string name="app_xy">同意协议</string>
    <string name="app_success" translatable="false">登录成功</string>
    <string name="app_update_userinfo_success">修改个人信息成功</string>
    <string name="app_update_pwd_success">修改密码成功</string>
    <string name="app_getVarly_success" translatable="false">获取成功</string>
    <string name="app_register_success" translatable="false">注册成功</string>
    <string name="app_serson" translatable="false">搜索</string>
    <string name="app_friendy_userName_empty" translatable="false">请输入您要搜索的好友账号</string>
    <string name="app_friendy_already" translatable="false">你们已经是好友啦!</string>
    <string name="app_user_no_way" translatable="false">该用户不存在</string>
    <string name="app_setting_bz" translatable="false">设置备注和标签</string>
    <string name="app_pyq" translatable="false">朋友圈</string>
    <string name="app_more_msg" translatable="false">更多信息</string>
    <string name="app_send_msg" translatable="false">发消息</string>
    <string name="app_add_con" translatable="false">添加到通讯录</string>
    <string name="app_send" translatable="false">发送</string>
    <string name="app_input_msg" translatable="false">请输入验证信息</string>
    <string name="selected_num">(%s)</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="added">已添加</string>
    <string name="friend_inviting">等待验证</string>
    <string name="decline_friend_invitation">对方已拒绝</string>
    <string name="refused">已拒绝</string>
    <string name="app_zc">隐私政策 本应用尊重并保护所有使用服务用户的个人隐私权。
        为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。
        您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。
        适用范围
        (a) 在您注册本应用帐号时，您根据本应用要求提供的个人注册信息；
        (b) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；© 本应用通过合法途径从商业伙伴处取得的用户个人数据。 您了解并同意，以下信息不适用本隐私权政策：
        (a) 您在使用本应用平台提供的搜索服务时输入的关键字信息；
        (b) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；© 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。 信息使用
        (a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。
        (b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。© 为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与本应用合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。 信息披露 在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：
        (a) 经您事先同意，向第三方披露；
        (b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；© 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
        (d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；
        (e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；
        (f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。
        (g) 其它本应用根据法律、法规或者网站政策认为合适的披露。 信息存储和交换 本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。
        Cookie的使用
        (a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。本应用使用cookies可为您提供更加周到的个性化服务，包括推广服务。
        (b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。© 通过本应用所设cookies所取得的有关信息，将适用本政策。 信息安全
        (a) 本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。
        (b) 在使用本应用网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对
        7.本隐私政策的更改
        (a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。
        (b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。 请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。
        ———————————————— 版权声明：
        本文为CSDN博主「郏国上」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
        原文链接：https://blog.csdn.net/jia12216/article/details/82997996</string>
    <string name="app_pay">支付</string>
    <string name="app_collection">收藏</string>
    <string name="app_album">相册</string>
    <string name="app_expression">表情</string>
    <string name="app_setting">设置</string>
    <string name="app_exit">退出</string>
    <string name="app_loginout">退出登录</string>
    <string name="app_safe">账号与安全</string>
    <string name="app_new_message_notice">新消息通知</string>
    <string name="app_static">勿扰模式</string>
    <string name="app_chat">聊天</string>
    <string name="app_privacy">隐私</string>
    <string name="app_currency">通用</string>
    <string name="app_about_wind">关于风声</string>
    <string name="app_help">帮助与反馈</string>
    <string name="app_plug_in_unit">插件</string>
    <string name="app_change_account">切换账号</string>
    <string name="app_phone">手机号</string>
    <string name="app_account_number">账号</string>
    <string name="app_updat_pwd">修改密码</string>
    <string name="app_setted_pwd">未设置</string>
    <string name="app_btn_urgent_contacts">应急联系人</string>
    <string name="app_login_manage">登录设备管理</string>
    <string name="app_more_setting">更多安全设置</string>
    <string name="app_your_phone_number">你的手机号:</string>
    <string name="app_view_address_book">查看手机通讯录</string>
    <string name="app_update_phone">更换手机号</string>
    <string name="app_btn_next">下一步</string>
    <string name="app_bind_phone_info">已启用手机通讯录匹配。如果你的通讯录中有朋友注册，系统会通知你</string>
    <string name="app_update_phone_info">验证码将以短信的形式发送给你</string>
    <string name="app_edit_phone">请输入手机号</string>
    <string name="app_edit_old_pwd">请输入旧密码</string>
    <string name="app_edit_new_pwd">请输入新密码</string>
    <string name="app_again_edit_pwd">请再次输入新密码</string>
    <string name="app_edit_code">请输入验证码</string>
    <string name="app_get_code">获取验证码</string>
    <string name="app_find_pwd_method">你可以通过短信验证来找回账号密码</string>
    <string name="app_complete">完成</string>
    <string name="app_update_pwd_explain">设置密码后可以通过账号/手机号/邮箱+账号密码登录</string>
    <string name="app_pwd_speces">密码必须至少8个字符，而且同时包含字母和数字</string>
    <string name="app_forget_pwd">忘记旧密码？</string>
    <string name="app_message_notice">新消息通知</string>
    <string name="app_voice_video_invitation">语音和视频通话邀请通知</string>
    <string name="app_invitation_visible_details">通知显示消息详情</string>
    <string name="app_voice">声音</string>
    <string name="app_shock">震动</string>
    <string name="app_receiver_voice">使用听筒播放消息</string>
    <string name="app_enter_send">回车键发送消息</string>
    <string name="app_chat_bg">聊天背景</string>
    <string name="app_expression_manager">表情管理</string>
    <string name="app_clear_chat">清空聊天记录</string>
    <string name="app_select_pic">选择背景图</string>
    <string name="app_to_sd_card_select_pic">从手机相册选选择</string>
    <string name="app_photograph">拍一张</string>
    <string name="app_chat_bg_all">将背景应用到所有聊天场景</string>
    <string name="app_add_sigle_expression">添加单个表情</string>
    <string name="app_add_my_expression">我的自拍表情</string>
    <string name="app_all_expression">整套表情</string>
    <string name="app_add_me_need_verification">加我为好友时需要验证</string>
    <string name="app_add_me_style">添加我的方式</string>
    <string name="app_recommend_mail_list">向我推荐通讯录好友</string>
    <string name="app_explain_open">开启后，为你推荐已经开通风声的手机联系人</string>
    <string name="app_blacklist">通讯录黑名单</string>
    <string name="app_wechat_moments">朋友圈和视频动态</string>
    <string name="app_prohibit_other_see">不让他(她)看</string>
    <string name="app_prohibit_see_other">不看他(她)</string>
    <string name="app_allow_friend">允许朋友查看朋友圈范围</string>
    <string name="app_allow_stranger">允许陌生人查看十条朋友圈</string>
    <string name="app_wechat_renew">朋友圈更新提醒</string>
    <string name="app_portrait_model">开启横屏模式</string>
    <string name="app_multilingual">多语言</string>
    <string name="app_font_size">字体大小</string>
    <string name="app_multi_media">照片、视频和文件</string>
    <string name="app_find_page">发现页管理</string>
    <string name="app_head_photo">头像</string>
    <string name="app_nickname">昵称</string>
    <string name="app_qr_code">二维码</string>
    <string name="app_sex">性别</string>
    <string name="app_addr">地区</string>
    <string name="app_sign">个性签名</string>
    <string name="app_man">男</string>
    <string name="app_woman">女</string>
    <string name="app_edit_new_nickname">请输入新昵称</string>
    <string name="app_edit_sign">说点什么吧</string>
    <string name="app_sing_max_length">50</string>
    <string name="app_edit_group_notice_max_length">150</string>
    <string name="app_edit_group_notice_max_length_toast">内容最大不能超过%d个字符</string>
    <string name="app_receivables_payment">收付款</string>
    <string name="app_wallet">钱包</string>
    <string name="app_service">服务</string>
    <string name="app_other_service">第三方服务</string>
    <string name="app_real_name">实名认证</string>
    <string name="app_update_pay_pwd">修改支付密码</string>
    <string name="app_forget_pay_pwd">忘记支付密码</string>
    <string name="app_fingerprint_pay">指纹支付</string>
    <string name="app_allow_transfer_accounts_for_phone">允许通过手机号向我转账</string>
    <string name="app_charging_service">扣费服务</string>
    <string name="app_get_money_time">转账到账时间</string>
    <string name="app_service_manager">服务管理</string>
    <string name="app_no_function">功能暂未开放</string>
    <string name="app_del_wechat_pay">注销微信支付</string>
    <string name="app_see_all_group_member">查看全部群成员</string>
    <string name="app_group_name">群聊名称</string>
    <string name="app_group_qr_code">群二维码</string>
    <string name="app_group_notice">群公告</string>
    <string name="app_group_chat_record">聊天记录</string>
    <string name="app_group_chat_message_free">消息免打扰</string>
    <string name="app_group_chat_top">聊天置顶</string>
    <string name="app_group_my_nickname">我在本群的昵称</string>
    <string name="app_group_display_nickname">显示群成员昵称</string>
    <string name="app_group_delete_out">删除并退出</string>
    <string name="app_publish">发布</string>
    <string name="app_only_group_up_edit">仅群主可编辑</string>
    <string name="app_chang_account">轻触头像以切换账号</string>
    <string name="app_shake">摇一摇</string>
    <string name="app_shopping">购物</string>
    <string name="app_game">游戏中心</string>
    <string name="app_reply">回复</string>
    <string name="app_camera">拍摄</string>
    <string name="app_pic_video">照片或视频</string>
    <string name="app_from_file">从手机相册选择</string>
    <string name="app_words_content">文字内容</string>
    <string name="app_cancel">取消</string>
    <string name="app_fabiao">发表</string>
    <string name="app_now_idea">这一刻的想法...</string>
    <string name="app_now_addr">所在位置</string>
    <string name="app_tixing_shuikan">提醒谁看</string>
    <string name="app_shuikeyikan">谁可以看</string>
</resources>