<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:background="@color/color_f4f4f4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.exam.fs.push.widget.TitleView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_ico_back="true"
            app:right_btn_isShow="false"
            app:right_icon_res_ishow="false"
            app:right_text_ishow="false" />

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_receiver_voice"
            app:left_text="@string/app_receiver_voice"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_enter_send"
            app:left_text="@string/app_enter_send"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/btn_chat_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"
            android:layout_marginTop="@dimen/len_10"
            app:right_icon="@drawable/icon_right_black_more"
            app:left_text="@string/app_chat_bg"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/btn_expression_manager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"
            app:right_icon="@drawable/icon_right_black_more"
            app:left_text="@string/app_expression_manager"/>

        <TextView
            android:id="@+id/btn_clear_chat"
            android:text="@string/app_clear_chat"
            style="@style/matchBtn"/>

    </LinearLayout>
</layout>
