<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_f4f4f4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.exam.fs.push.widget.TitleView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:left_ico_back="true"
            app:right_btn_isShow="false"
            app:right_icon_res_ishow="false"
            app:right_text_ishow="false" />

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_message_notice"
            app:left_text="@string/app_message_notice"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_invitation"
            app:left_text="@string/app_voice_video_invitation"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_details"
            app:left_text="@string/app_invitation_visible_details"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_voice"
            android:layout_marginTop="@dimen/len_10"
            app:left_text="@string/app_voice"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>

        <com.exam.fs.push.widget.ShowInfoView
            android:id="@+id/siv_shock"
            app:left_text="@string/app_shock"
            app:right_icon="@drawable/sel_tab_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_44"/>
    </LinearLayout>
</layout>
